#Changelog for MyTickle

v2.1.0
modified code to use .NET SQL classes and not rely on the SQLPS module
Added "name" alias to Event parameter in Add-TickleEvent and Set-TickleEvent
Modified query in Get-TickleEvent to ignore archived and expired items when
searching by event name.
Modified Get-TickleEvent to retrieve archived entries
Added Export-TickleDatabase command
Added Import-TickleDatabase command

v2.0.0
Modified module so that tickle data is stored in a SQL database.
Added functions to create database and table.
Moved functions to separate file
Added class definition
Updated documentation
set required PowerShell version to 5.0
